adding action find zip code

--- a/cep_api_two/config/locales/en.yml
+++ b/cep_api_two/config/locales/en.yml
@@ -31,3 +31,17 @@
 
 en:
   hello: "Hello world"
+  token:
+    expired: 'The token has expired! Please generate again'
+    invalid: 'The token is invalid'
+    not_provided: 'The token is not provided'
+    type_invalid: 'The token type is invalid'
+  create_token:
+    invalid_email_or_password: 'Email or password is invalid'
+    email_not_present: 'Email is blank'
+    password_not_present: 'Password is blank'
+    email_or_password_not_match: 'Incorrect email or password'
+  parms:
+    invalid: 'Parameter is invalid'
+  action:
+    zip_code_not_found: 'Records not found for the zip code entered: %{zip_code}'
