--- a/cep_api_two/config/locales/pt-BR.yml
+++ b/cep_api_two/config/locales/pt-BR.yml
@@ -10,3 +10,7 @@ pt-BR:
     email_not_present: 'E-mail esta em branco'
     password_not_present: 'Senha esta em branco'
     email_or_password_not_match: 'Email ou senha incorreta'
+  parms:
+    invalid: 'Parametro esta inválido'
+  action:
+    zip_code_not_found: 'Registros não encontrado para o cep informado: %{zip_code}'
